# scraper

./: Dockerfile  Makefile  README.md  pyproject.toml  test.db
src/: __init__.py  main.py  test.db  test.db-journal
src/core/: __init__.py  crawler.py  database.py  job_manager.py  scraper.py
src/routes/: __init__.py  crawl.py  history.py  jobs.py  map.py  scrape.py
tests/: test_basic.py
