[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nam pham", email = "contact.nampham.work@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
scraper = "scraper:main"
