[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nam pham", email = "contact.nampham.work@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.15",
    "aiosqlite>=0.21.0",
    "bs4>=0.0.2",
    "fake-useragent>=2.1.0",
    "fastapi[standard]>=0.115.12",
    "lxml>=5.3.1",
    "markdownify>=1.1.0",
    "playwright>=1.51.0",
    "pydantic>=2.11.1",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
scraper = "scraper:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
